# seatrades

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yaml
.streamlit/: config.toml
app/: components.py
app/tabs/: assignments_tab.py  campers_tab.py  friends_tab.py  optimization_config_tab.py  seatrades_tab.py
docs/: CONTRIBUTING.md  prd-service-layer-refactor.md
docs/adr/: 0001-milp-optimization.md  0002-test-structure.md  0003-service-layer-architecture.md  0004-solver-monitoring-strategy.md  0005-git-branching-strategy.md  0006-pandera-error-translation-layer.md  0007-agent-visual-verification.md  0008-solve-cancellation-deferred.md  0009-streamlit-floor-apptest-file-uploader.md  0010-decompose-preference-into-orthogonal-facts.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/prd/: assignments-export.md  camper-index-identifiers.md  camper-relationships.md  infeasibility-diagnosis.md  ruff-mypy-pre-commit.md  streamlit-deployment-health-check.md  suspected-threshold-spike-115.md
seatrades/: blocks.py  config.py  diagnostics.py  live_cbc_log.py  preferences.py  problem.py  results.py  scoring.py  seatrades.py  simulation.py  solve_run.py  solver.py  visualization.py
seatrades_app/: components.py
seatrades_app/tabs/: assignments_tab.py  campers_tab.py  optimization_config_tab.py  seatrades_tab.py  simulation_config_tab.py
src/: results.py  seatrades.py
tests/: test_ci_workflow.py  test_lint_config.py  test_test.py
tests/test_app/: conftest.py  helpers.py  test_app_smoke.py  test_app_solve_outcomes.py  test_assignments_done_view.py  test_assignments_guard.py  test_assignments_tab.py  test_camper_setup_tab.py  test_camper_upload_workflows.py  test_campers_tab.py  test_components.py  test_end_to_end_workflows.py  test_friends_tab.py  test_optimization_config_tab.py  test_seatrade_setup_tab.py  test_seatrade_upload_workflows.py
tests/test_seatrades/: conftest.py  test_blocks.py  test_config.py  test_diagnostics.py  test_live_cbc_log.py  test_preferences.py  test_problem.py  test_results.py  test_scoring.py  test_simulation.py  test_solve_run.py  test_solver.py  test_visualization.py  test_wideform.py
tests/test_seatrades_app/: conftest.py  test_assignments_tab.py
