[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seatrades"
version = "2024.0.0"
dependencies = [
  "pandera",
  "pandas",
  "pulp",
  "altair",
  "streamlit",
  "faker"
]
requires-python = ">=3.10"
authors = [
  {name = "Gavin Grochowski", email = "grochowskigavin@gmail.com"},
]
maintainers = [
  {name = "Gavin Grochowski", email = "grochowskigavin@gmail.com"}
]
description = "A tool to help Keats Camps using math."
readme = "README.md"
license = {file = "LICENSE.txt"}

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pandas-stubs",
  "types-PyYAML",
  "pandera[mypy]",
  "pre-commit",
  "pytest",
  "pytest-cov",
]

[project.urls]
Repository = "https://github.com/gavingro/seatrades"

[tool.setuptools]
packages = ["seatrades"]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-v -ra --cov src"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["temp.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "ARG", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
plugins = ["pandera.mypy"]

[[tool.mypy.overrides]]
module = "pulp.*"
ignore_missing_imports = true
