[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seatrades"
version = "2024.0.0"
dependencies = [
  "pandera",
  "pandas",
  "pulp",
  "altair",
  "streamlit",
  "faker"
]
requires-python = ">=3.10"
authors = [
  {name = "Gavin Grochowski", email = "grochowskigavin@gmail.com"},
]
maintainers = [
  {name = "Gavin Grochowski", email = "grochowskigavin@gmail.com"}
]
description = "A tool to help Keats Camps using math."
readme = "README.md"
license = {file = "LICENSE.txt"}

[project.optional-dependencies]
dev = [
  # Pinned to match the ruff-pre-commit rev in .pre-commit-config.yaml.
  # test_lint_config.py asserts installed ruff == that rev; an unpinned ruff
  # lets a fresh CI install drift to a newer release and fail. Bump both together.
  "ruff==0.15.14",
  # Pinned to match the mirrors-mypy rev in .pre-commit-config.yaml, same as
  # ruff above — keeps a fresh CI install from drifting to a newer release.
  "mypy==1.19.1",
  "pandas-stubs",
  "types-PyYAML",
  "pandera[mypy]",
  "pre-commit",
  "pytest",
  "pytest-cov",
]

[project.urls]
Repository = "https://github.com/gavingro/seatrades"

[tool.setuptools]
packages = ["seatrades"]

[tool.pytest.ini_options]
testpaths = "tests"
# app.py (Streamlit entry script) and the app/ package share the module name
# "app"; --doctest-modules collection imports one and mismatches the other.
# Ignore the thin entry script (it has no doctests) to resolve the clash.
addopts = "-v -ra --cov src -m 'not slow' --ignore=app.py"
markers = [
    "slow: slow tests (e.g. full solver runs); deselected by default, run with -m slow",
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["temp.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "ARG", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
plugins = ["pandera.mypy"]

[[tool.mypy.overrides]]
module = "pulp.*"
ignore_missing_imports = true
